@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -100,4 +100,8 @@ public class ToolLocalSimpleTest extends ToolSimpleTest {
         // can't set --enable-preview for local, ignore
     }
 
+    @Override
+    public void testRecords() {
+        // can't set --enable-preview for local, ignore
+    }
 }
